Updated spring security tutorial

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#mysql configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/maid-app-db
+spring.datasource.username=root
+spring.datasource.password=Choraakash1@
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
+#hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
