--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/maid-app-db
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-security-tutorial
 spring.datasource.username=root
 spring.datasource.password=Choraakash1@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
